--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,3 +27,16 @@ html {
 #Images::-webkit-scrollbar-thumb:hover {
   background: transparent;
 }
+
+@keyframes spin-slow {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin-slow {
+  animation: spin-slow 2s linear infinite;
+}
