--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,9 @@ html {
   background: transparent;
 }
 
+#Text {
+  overflow-y: hidden;
+}
 @keyframes spin-slow {
   from {
     transform: rotate(0deg);
